# gender-app

./: Makefile  README.md  hello.py  main.py  pyproject.toml
controller/: GenderAppController.py
model/: GenderAppModel.py  GenderChecker.py
util/: Observable.py  Observer.py
view/: GenderAppView.py
