[project]
name = "gender-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "flet>=0.25.2",
    "flet-cli>=0.25.2",
    "flet-desktop>=0.25.2",
    "flet-web>=0.25.2",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pylint>=3.3.3",
    "ruff>=0.9.2",
]
